<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:background="#F4F4F4"
        tools:context=".fragment.AboutFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:elevation="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <LinearLayout
                        android:id="@+id/llDozeModeQue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/help_doze_mode"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            app:fontFamily="sans-serif-condensed-medium" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivArrow"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="top"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                            app:tint="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llDozeModeAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/help_doze_mode_answer"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/_14sdp"
                            app:fontFamily="sans-serif-condensed" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:elevation="@dimen/_8sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <LinearLayout
                        android:id="@+id/llRepeateIntervalQue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/help_repeate_interval_que"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            app:fontFamily="sans-serif-condensed-medium" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivRepeateIntervalArrow"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="top"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                            app:tint="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llRepeateIntervalAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/help_repeate_interval_answer"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/_14sdp"
                            app:fontFamily="sans-serif-condensed" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:elevation="@dimen/_8sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <LinearLayout
                        android:id="@+id/llContactQue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/help_contact_que"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            app:fontFamily="sans-serif-condensed-medium" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivContactArrow"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="top"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                            app:tint="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llContactAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/help_contact_answer"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/_14sdp"
                            app:fontFamily="sans-serif-condensed" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvContactUs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/white_border"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:padding="@dimen/_10sdp"
                            android:text="Contact us"
                            android:textAllCaps="true"
                            android:textColor="@color/purple_200" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</layout>